fix:overflow-s

--- a/src/index.css
+++ b/src/index.css
@@ -18,5 +18,5 @@ code {
 
 html {
   scroll-behavior: smooth;
-  overflow: hidden;
+  overflow-x: hidden;
 }
